@@ -158,7 +158,7 @@ namespace ip
     { }
 
     explicit constexpr
-    address_v4(uint_type __val) : _M_addr(_S_hton(__val))
+    address_v4(uint_type __val) : _M_addr(_S_hton_32(__val))
     {
 #if UINT_LEAST32_MAX > 0xFFFFFFFF
       if (__val > 0xFFFFFFFF)
@@ -191,7 +191,8 @@ namespace ip
       };
     }
 
-    constexpr uint_type to_uint() const noexcept { return _S_ntoh(_M_addr); }
+    constexpr uint_type
+    to_uint() const noexcept { return _S_ntoh_32(_M_addr); }
 
 #ifdef _GLIBCXX_HAVE_ARPA_INET_H
     template<typename _Allocator = allocator<char>>
@@ -224,22 +225,22 @@ namespace ip
     friend address_v4 make_address_v4(const char*, error_code&) noexcept;
 
 #if __BYTE_ORDER__ == __ORDER_BIG_ENDIAN__
-    static constexpr uint16_t _S_hton(uint16_t __h) { return __h; }
-    static constexpr uint16_t _S_ntoh(uint16_t __n) { return __n; }
-    static constexpr uint32_t _S_hton(uint32_t __h) { return __h; }
-    static constexpr uint32_t _S_ntoh(uint32_t __n) { return __n; }
+    static constexpr uint16_t _S_hton_16(uint16_t __h) { return __h; }
+    static constexpr uint16_t _S_ntoh_16(uint16_t __n) { return __n; }
+    static constexpr uint32_t _S_hton_32(uint32_t __h) { return __h; }
+    static constexpr uint32_t _S_ntoh_32(uint32_t __n) { return __n; }
 #else
     static constexpr uint16_t
-    _S_hton(uint16_t __h) { return __builtin_bswap16(__h); }
+    _S_hton_16(uint16_t __h) { return __builtin_bswap16(__h); }
 
     static constexpr uint16_t
-    _S_ntoh(uint16_t __n) { return __builtin_bswap16(__n); }
+    _S_ntoh_16(uint16_t __n) { return __builtin_bswap16(__n); }
 
     static constexpr uint32_t
-    _S_hton(uint32_t __h) { return __builtin_bswap32(__h); }
+    _S_hton_32(uint32_t __h) { return __builtin_bswap32(__h); }
 
     static constexpr uint32_t
-    _S_ntoh(uint32_t __n) { return __builtin_bswap32(__n); }
+    _S_ntoh_32(uint32_t __n) { return __builtin_bswap32(__n); }
 #endif
 
     in_addr_t _M_addr; // network byte order
@@ -1396,7 +1397,7 @@ namespace ip
 			  || __proto == protocol_type::v6());
 
 	_M_data._M_v4.sin_family = __proto.family();
-	_M_data._M_v4.sin_port = address_v4::_S_hton(__port_num);
+	_M_data._M_v4.sin_port = address_v4::_S_hton_16(__port_num);
       }
 
       constexpr
@@ -1407,14 +1408,14 @@ namespace ip
 	if (__addr.is_v4())
 	  {
 	    _M_data._M_v4.sin_family = protocol_type::v4().family();
-	    _M_data._M_v4.sin_port = address_v4::_S_hton(__port_num);
+	    _M_data._M_v4.sin_port = address_v4::_S_hton_16(__port_num);
 	    _M_data._M_v4.sin_addr.s_addr = __addr._M_v4._M_addr;
 	  }
 	else
 	  {
 	    _M_data._M_v6 = {};
 	    _M_data._M_v6.sin6_family = protocol_type::v6().family();
-	    _M_data._M_v6.sin6_port = address_v4::_S_hton(__port_num);
+	    _M_data._M_v6.sin6_port = address_v4::_S_hton_16(__port_num);
 	    __builtin_memcpy(_M_data._M_v6.sin6_addr.s6_addr,
 			     __addr._M_v6._M_bytes.data(), 16);
 	    _M_data._M_v6.sin6_scope_id = __addr._M_v6._M_scope_id;
@@ -1466,11 +1467,11 @@ namespace ip
 
       constexpr port_type
       port() const noexcept
-      { return address_v4::_S_ntoh(_M_data._M_v4.sin_port); }
+      { return address_v4::_S_ntoh_16(_M_data._M_v4.sin_port); }
 
       void
       port(port_type __port_num) noexcept
-      { _M_data._M_v4.sin_port = address_v4::_S_hton(__port_num); }
+      { _M_data._M_v4.sin_port = address_v4::_S_hton_16(__port_num); }
 
       void* data() noexcept { return &_M_data; }
       const void* data() const noexcept { return &_M_data; }
